--- a/ASFCardReader/en.lproj/ParentViewController.xib
+++ b/ASFCardReader/en.lproj/ParentViewController.xib
@@ -34,7 +34,7 @@
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
 			<object class="IBUIView" id="766721923">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIWebView" id="911774220">
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="581503307"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -55,8 +56,10 @@
 							<object class="IBUIButton" id="551184880">
 								<reference key="NSNextResponder" ref="581503307"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{163, 11}, {10, 10}}</string>
+								<string key="NSFrame">{{166, 11}, {10, 10}}</string>
 								<reference key="NSSuperview" ref="581503307"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -92,16 +95,17 @@
 							<object class="IBUILabel" id="748947358">
 								<reference key="NSNextResponder" ref="581503307"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{10, 5}, {53, 21}}</string>
+								<string key="NSFrame">{{20, 5}, {53, 21}}</string>
 								<reference key="NSSuperview" ref="581503307"/>
-								<reference key="NSNextKeyView" ref="551184880"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="360480954"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Status:</string>
+								<string key="IBUIText">Scanner:</string>
 								<object class="NSColor" key="IBUITextColor" id="35915245">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -123,8 +127,10 @@
 							<object class="IBUILabel" id="360480954">
 								<reference key="NSNextResponder" ref="581503307"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{56, 5}, {99, 21}}</string>
+								<string key="NSFrame">{{75, 5}, {99, 21}}</string>
 								<reference key="NSSuperview" ref="581503307"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="551184880"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -149,6 +155,7 @@
 						</array>
 						<string key="NSFrame">{{286, 0}, {196, 32}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="748947358"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -159,6 +166,8 @@
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="911774220"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
 					<int key="IBUIStatusBarStyle">2</int>
@@ -288,7 +297,42 @@
 			<nil key="sourceID"/>
 			<int key="maxID">68</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ParentViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="apfWebView">UIWebView</string>
+						<string key="statusButton">UIButton</string>
+						<string key="statusLabel">UILabel</string>
+						<string key="statusView">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="apfWebView">
+							<string key="name">apfWebView</string>
+							<string key="candidateClassName">UIWebView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="statusButton">
+							<string key="name">statusButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="statusLabel">
+							<string key="name">statusLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="statusView">
+							<string key="name">statusView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ParentViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
